--- a/CoreArchitecture.Domain/CoreArchitecture.Domain.csproj
+++ b/CoreArchitecture.Domain/CoreArchitecture.Domain.csproj
@@ -5,4 +5,10 @@
     <UseWindowsForms>true</UseWindowsForms>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.7" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="5.0.7" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.7" />
+  </ItemGroup>
+
 </Project>
