--- a/CoreArchitecture.ResponseRequest/CoreArchitecture.ResponseRequest.csproj
+++ b/CoreArchitecture.ResponseRequest/CoreArchitecture.ResponseRequest.csproj
@@ -5,4 +5,8 @@
     <UseWindowsForms>true</UseWindowsForms>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MediatR" Version="9.0.0" />
+  </ItemGroup>
+
 </Project>
