swagger as for startup configure

--- a/CoreArchitecture.API/CoreArchitecture.API.csproj
+++ b/CoreArchitecture.API/CoreArchitecture.API.csproj
@@ -11,5 +11,11 @@
     <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="6.1.4" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\CoreArchitecture.Domain\CoreArchitecture.Domain.csproj" />
+    <ProjectReference Include="..\CoreArchitecture.Facade\CoreArchitecture.Facade.csproj" />
+    <ProjectReference Include="..\CoreArchitecture.Handlers\CoreArchitecture.Handlers.csproj" />
+  </ItemGroup>
+
 
 </Project>
