identity test work

--- a/CoreArchitecture.Facade/CoreArchitecture.Facade.csproj
+++ b/CoreArchitecture.Facade/CoreArchitecture.Facade.csproj
@@ -5,4 +5,9 @@
     <UseWindowsForms>true</UseWindowsForms>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\CoreArchitecture.Domain\CoreArchitecture.Domain.csproj" />
+    <ProjectReference Include="..\CoreArchitecture.Handlers\CoreArchitecture.Handlers.csproj" />
+  </ItemGroup>
+
 </Project>
