--- a/CoreArchitecture.Domain/CoreArchitecture.Domain.csproj
+++ b/CoreArchitecture.Domain/CoreArchitecture.Domain.csproj
@@ -11,4 +11,13 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.7" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\CoreArchitecture.Core\CoreArchitecture.Core.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Helpers\" />
+    <Folder Include="JwtModels\" />
+  </ItemGroup>
+
 </Project>
