--- a/CoreArchitecture.ResponseRequest/CoreArchitecture.ResponseRequest.csproj
+++ b/CoreArchitecture.ResponseRequest/CoreArchitecture.ResponseRequest.csproj
@@ -9,4 +9,8 @@
     <PackageReference Include="MediatR" Version="9.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\CoreArchitecture.Domain\CoreArchitecture.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
