--- a/CoreArchitecture.Domain/CoreArchitecture.Domain.csproj
+++ b/CoreArchitecture.Domain/CoreArchitecture.Domain.csproj
@@ -6,6 +6,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="JwtModels\**" />
+    <EmbeddedResource Remove="JwtModels\**" />
+    <None Remove="JwtModels\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.7" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="5.0.7" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.7" />
@@ -17,7 +23,6 @@
 
   <ItemGroup>
     <Folder Include="Helpers\" />
-    <Folder Include="JwtModels\" />
   </ItemGroup>
 
 </Project>
